// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser json5 block: custom block 1`] = `
Object {
  "meta": Object {
    "requiresAuth": false,
  },
  "name": "name-override",
}
`;

exports[`Parser yaml block: yaml block 1`] = `
Object {
  "meta": Object {
    "lang": "es",
  },
}
`;
